# defib

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
.hypothesis/constants/: 1615e8b857d8ade3  176d375831ed38df  17e360b8c8ef7953  1dce308c4a9115ae  33e563e99c7a2078  3e770b12c3161d49  45a20695b4894366  4715a115dd982937  4f2165c32e981b1b  5376976d7698f4d6  54066eca308d95eb  5bb04fcb5431b9b0  6937fb03f23b2c12  6c8acda8e054d8c2  70aa47ec0066c400  719b6593f4795406  739a9b2e6830088a  7f5a151d2599c7a7  809c7ead26a99e57  814b9147e308999c  89840853cae12ba0  9898c8fcc9ed377d  9e1f7b9197b24ffd  9e829b255619df68  a8db743361d13576  b7c0c5db3188c6e6  bb2f205b5de532a9  bf157f5cb711946c  c184b09ed4b7bc43  c9db03db7959b764  d3f0bf89b2b34111  daa54e9ae3dc8a67  (+6 more)
agent/: .gitignore  Makefile  README.md  cobs.c  cobs.h  emmc_himci.c  emmc_himci.h  link.ld  main.c  protocol.c  protocol.h  spi_flash.c  spi_flash.h  spi_flash_hisfc350.c  startup.S  test_agent  test_agent.c  test_cobs_detail.c  test_firmware_data.c  uart.c  uart.h
docs/: nand-ubi-restore-guide.md  qemu_hisilicon_spec.md
tests/: conftest.py  test_agent_cobs.py  test_agent_protocol.py  test_autoboot.py  test_capture_format.py  test_capture_recorder.py  test_cli.py  test_crc.py  test_firmware.py  test_flash_stream_regression.py  test_flashdump.py  test_frames.py  test_handshake_resilience.py  test_nand_install.py  test_network.py  test_power.py  test_power_rack.py  test_power_vectis.py  test_profiles.py  test_protocol_cv6xx.py  test_protocol_robustness.py  test_protocol_standard.py  test_protocol_v500.py  test_recovery_rack_fastboot.py  test_recovery_session.py  test_serial_platform.py  test_serial_ports.py  test_transport_rack.py  test_transport_rfc2217.py  test_transport_socket.py  test_tui.py  test_ubi.py  test_uboot_env.py  test_write_regression.py
web/: index.html  protocol.js  protocol.test.js
(+128 files in other folders)
